[gd_scene load_steps=5 format=3 uid="uid://s54g1af00e35"]

[ext_resource type="Texture2D" uid="uid://byjlamtq07vga" path="res://assets/player_ship.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://bs87nw36twbtb" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="PackedScene" uid="uid://dfe1npfai1u70" path="res://scenes/explosion.tscn" id="3_qhqgy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3vyb7"]
radius = 30.0

[node name="Player" type="RigidBody2D"]
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_g2els")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_3vyb7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3vyb7")

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(50, 0)

[node name="GunCooldown" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Explosion" parent="." instance=ExtResource("3_qhqgy")]
visible = false

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="GunCooldown" to="." method="_on_gun_cooldown_timeout"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_invulnerability_timer_timeout"]
